crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_direct_each.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: parse_field_info(&field)
---
Some(
    FieldInfo {
        name: Ident {
            sym: scores,
        },
        member: Member::Named(
            Ident {
                sym: scores,
            },
        ),
        ty: Type::Path {
            qself: None,
            path: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident {
                            sym: Vec,
                        },
                        arguments: PathArguments::AngleBracketed {
                            colon2_token: None,
                            lt_token: Lt,
                            args: [
                                GenericArgument::Type(
                                    Type::Path {
                                        qself: None,
                                        path: Path {
                                            leading_colon: None,
                                            segments: [
                                                PathSegment {
                                                    ident: Ident {
                                                        sym: i32,
                                                    },
                                                    arguments: PathArguments::None,
                                                },
                                            ],
                                        },
                                    },
                                ),
                            ],
                            gt_token: Gt,
                        },
                    },
                ],
            },
        },
        validation: ValidationInfo {
            field_validators: [],
            element_validators: [
                ValidatorAttr {
                    validator: Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident {
                                    sym: RangeValidation,
                                },
                                arguments: PathArguments::None,
                            },
                        ],
                    },
                    infer_type: false,
                    explicit_type: None,
                    args: [
                        (
                            Ident {
                                sym: min,
                            },
                            Expr::Lit {
                                attrs: [],
                                lit: Lit::Int {
                                    token: 0,
                                },
                            },
                        ),
                        (
                            Ident {
                                sym: max,
                            },
                            Expr::Lit {
                                attrs: [],
                                lit: Lit::Int {
                                    token: 100,
                                },
                            },
                        ),
                    ],
                },
            ],
            is_nested: false,
            is_newtype: false,
        },
    },
)
