crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_direct_multiple_validators.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
assertion_line: 135
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "value",
        member: "value",
        ty: "i32",
        validation: SnapshotValidationInfo {
            field_validators: [
                SnapshotValidator {
                    name: "RangeValidation",
                    infer_type: false,
                    explicit_type: None,
                    args: [
                        (
                            "min",
                            "0",
                        ),
                        (
                            "max",
                            "100",
                        ),
                    ],
                },
                SnapshotValidator {
                    name: "EvenValidation",
                    infer_type: false,
                    explicit_type: None,
                    args: [],
                },
            ],
            element_validators: [],
            is_nested: false,
            is_newtype: false,
        },
    },
)
