crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_direct_newtype.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
assertion_line: 175
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "index",
        member: "index",
        ty: "CommonVariableIndex",
        validation: SnapshotValidationInfo {
            field_validators: [],
            element_validators: [],
            is_nested: false,
            is_newtype: true,
        },
    },
)
