crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_direct_newtype_with_validator.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "index",
        member: "index",
        ty: "Option < CommonVariableIndex >",
        validation: SnapshotValidationInfo {
            shape: "newtype",
            field_validators: [
                SnapshotValidator {
                    label: None,
                    name: "RequiredValidation",
                    infer_type: true,
                    explicit_type: None,
                    builder_methods: [],
                },
            ],
            element_validators: [],
        },
    },
)
