crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_direct_skip.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
expression: parse_field(&field)
---
Skip
