crates/koruma-derive-core/src/tests/snapshots/koruma_derive_core__tests__parse_field_tests__parse_field_each_builder_entrypoint_validator.snap
---
source: crates/koruma-derive-core/src/tests/parse_field_tests.rs
assertion_line: 249
expression: parse_field_snapshot(&field)
---
Some(
    SnapshotFieldInfo {
        name: "scores",
        member: "scores",
        ty: "Vec < i32 >",
        validation: SnapshotValidationInfo {
            shape: "regular",
            field_validators: [],
            element_validators: [
                SnapshotValidator {
                    label: None,
                    name: "NumberRangeValidation",
                    infer_type: true,
                    explicit_type: None,
                    builder_methods: [
                        (
                            "min",
                            [
                                "1",
                            ],
                        ),
                        (
                            "max",
                            [
                                "5",
                            ],
                        ),
                    ],
                },
            ],
        },
    },
)
